# mrsl_quadrotor

./: .gitignore  README.md  wercker.yml
hector_gazebo_plugins/: CMakeLists.txt
mrsl_mobile_object/: CMakeLists.txt  package.xml
mrsl_mobile_object/include/mrsl_quadrotor_simulator/: Quadrotor.h  QuadrotorSO3AttitudeControl.h
mrsl_mobile_object/src/: mobile_object.cpp  rotate_object.cpp
mrsl_models/: CMakeLists.txt  package.xml
mrsl_models/models/D60/: D60.dae
mrsl_models/models/FLA_Exp4_monday_1A/: FLA_Exp4_monday_1A.dae
mrsl_models/models/FLA_Exp4_monday_1P/: FLA_Exp4_monday_1P.dae
mrsl_models/models/barrel/: barrel.dae
mrsl_models/models/building/: building.dae  building.stl
mrsl_models/models/collision/: collision.dae  collision.stl
mrsl_models/models/collision2/: collision2.dae  collision2.skp  collision2.stl  collision2~.skp
mrsl_models/models/collision4/: collision4.dae  collision4.skp  collision4.stl  collision4~.skp
mrsl_models/models/configure2/: configure2.dae
mrsl_models/models/configure4/: configure4.dae  configure4.stl
mrsl_models/models/corridor/: corridor.dae  corridor.skp  corridor.stl
mrsl_models/models/corridor_0/: corridor_0.dae  corridor_0.skp  corridor_0.stl
mrsl_models/models/corridor_10/: corridor_10.dae  corridor_10.skp  corridor_10.stl
mrsl_models/models/corridor_15/: corridor_15.dae  corridor_15.skp  corridor_15.stl
mrsl_models/models/corridor_20/: corridor_20.dae  corridor_20.skp  corridor_20.stl
mrsl_models/models/corridor_25/: corridor_25.dae  corridor_25.skp  corridor_25.stl
mrsl_models/models/corridor_30/: corridor_30.dae  corridor_30.skp  corridor_30.stl
mrsl_models/models/corridor_35/: corridor_35.dae  corridor_35.skp  corridor_35.stl  corridor_35~.skp
mrsl_models/models/corridor_40/: corridor_40.dae  corridor_40.skp  corridor_40.stl
mrsl_models/models/corridor_45/: corridor_45.dae  corridor_45.skp  corridor_45.stl
mrsl_models/models/corridor_5/: corridor_5.dae  corridor_5.skp  corridor_5.stl
mrsl_models/models/corridor_50/: corridor_50.dae  corridor_50.skp  corridor_50.stl
mrsl_models/models/corridor_50_wall/: corridor_50_wall.dae  corridor_50_wall.skp  corridor_50_wall.stl
mrsl_models/models/fla_april/: fla_april.dae  fla_april.skb
mrsl_models/models/fla_forest2/: fla_forest2.dae  fla_forest2.stl
mrsl_models/models/fla_hotel/: fla_hotel.dae  fla_hotel.skb  fla_hotel.skp
mrsl_models/models/fla_hotel_3doors/: fla_hotel_3doors.dae  fla_hotel_3doors.skb  fla_hotel_3doors.skp
mrsl_models/models/fla_office/: fla_office.dae
mrsl_models/models/fla_warehouse/: fla_warehouse.dae  fla_warehouse.skp  fla_warehouse.stl  fla_warehouse~.skp
mrsl_models/models/fla_warehouse1/: fla_warehouse1.dae
mrsl_models/models/fla_warehouse2/: fla_warehouse2.dae
mrsl_models/models/floor/: floor.dae  model.config  model.sdf
mrsl_models/models/house/: house.dae  house.stl
mrsl_models/models/house1/: model.config  model.sdf
mrsl_models/models/house2/: house2.dae  house2.stl
mrsl_models/models/house3/: house3.dae  house3.stl
mrsl_models/models/hummingbird/: hummingbird.dae  hummingbird.stl
mrsl_models/models/iros2017_corridor/: iros2017_corridor.dae  (+3 more)
mrsl_quadrotor_description/: CMakeLists.txt  \  package.xml
mrsl_quadrotor_description/urdf/: quadrotor.gazebo.xacro  quadrotor_so3.xacro
mrsl_quadrotor_description/worlds/: D60.world  FLA_Exp4_monday_1A.world  FLA_Exp4_monday_1P.world  collision.world  collision2.world  collision3.world  collision4.world  configure2.world  corridor.world  corridor_0.world  corridor_10.world  corridor_15.world  corridor_20.world  corridor_25.world  corridor_30.world  corridor_35.world  corridor_40.world  corridor_45.world  corridor_5.world  corridor_50.world  corridor_50_wall.world  corridor_barrel.world  empty.world  fla_april.world  fla_forest.world  fla_forest2.world  fla_hotel.world  fla_hotel_3doors.world  fla_office.world  fla_warehouse.world  fla_warehouse1.world  fla_warehouse2.world  forest0.world  forest1.world  forest2.world  forest3.world  forest4.world  forest5.world  forest6.world  forest7.world  (+16 more)
mrsl_quadrotor_launch/: CMakeLists.txt  package.xml
mrsl_quadrotor_launch/config/: Falcon4_gains.yaml  gains.yaml  gains_ddk.yaml  gains_falcon4.yaml  gains_hummingbird.yaml  gains_pelican.yaml
mrsl_quadrotor_launch/config/falcon4/: falcon4_gains.yaml  falcon4_os1_gains.yaml
mrsl_quadrotor_launch/launch/: Falcon4_control.launch  Falcon4_spawn.launch  Falcon4_spawn_OS1.launch  controller.launch  gazebo.launch  gazebo_state_farm.launch  spawn.launch  test.launch  test_video.launch
mrsl_quadrotor_launch/launch/falcon4/: falcon4_control.launch  falcon4_os1_control.launch  falcon4_spawn.launch  falcon4_spawn_os1.launch
mrsl_quadrotor_launch/scripts/: send_waypoints.sh  so3_cmd_pub.py  start_motor.sh  start_motor_waypoints.sh  start_motor_yaw.sh  timed_roslaunch.sh
mrsl_quadrotor_launch/scripts/line_tracker/: send_waypoints.sh  start_motor.sh  start_motor_waypoints.sh
mrsl_quadrotor_launch/scripts/trajectory_generator/: go_to_chairs.sh  go_to_pose.sh  send_waypoints.sh  test_gazebo.sh  test_juliett.sh  test_romeo.sh
mrsl_quadrotor_launch/src/: change_frame.cpp  change_header.cpp  joystick_convert.cpp  laser_combiner.cpp
mrsl_quadrotor_simulator/: CMakeLists.txt  package.xml
mrsl_quadrotor_simulator/include/mrsl_quadrotor_simulator/: Quadrotor.h  QuadrotorSO3AttitudeControl.h  QuadrotorTRPYControl.h
mrsl_quadrotor_simulator/src/: Quadrotor.cpp  QuadrotorSO3AttitudeControl.cpp  QuadrotorTRPYControl.cpp  quadrotor_propulsion.cpp  quadrotor_propulsion_trpy.cpp
mrsl_quadrotor_utils/: CMakeLists.txt  README.md  frames.gv  package.xml
mrsl_quadrotor_utils/include/mrsl_quadrotor_utils/: general_util.h  tf_listener.h
mrsl_quadrotor_utils/launch/: teleop.launch  test_tf.launch
mrsl_quadrotor_utils/script/: teleop.py  xbox_joy.py
mrsl_quadrotor_utils/src/: change_frame.cpp  change_header.cpp  change_odom.cpp  msg_to_tf.cpp  play_tf_static.cpp  publish_horizon.cpp  publish_rotate.cpp  publish_tf.cpp  tf_pub.cpp  transform_odom.cpp
(+165 files in other folders)
