<?xml version="1.0"?>
<package format="2">
  <name>mrsl_mobile_object</name>
  <version>0.0.0</version>
  <description>The mrsl_mobile_object package</description>

  <maintainer email="sikang@todo.todo">sikang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>cmake_modules</depend>
  <depend>kr_mav_msgs</depend>

</package>
