cmake_minimum_required(VERSION 2.8.3)
project(mrsl_quadrotor_launch)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
#find_package(catkin_simple REQUIRED)
#find_package(cmake_modules)
#find_package(Eigen REQUIRED)
#include_directories(${EIGEN_INCLUDE_DIRS})

find_package(catkin REQUIRED)

catkin_package()
 
#cs_add_executable(change_header src/change_header.cpp)
#cs_add_executable(change_frame src/change_frame.cpp)
#cs_add_executable(laser_combiner src/laser_combiner.cpp)
 
#cs_install()
 
#cs_export()

