cmake_minimum_required(VERSION 2.8.3)
project(mrsl_quadrotor_launch)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
#find_package(cmake_modules)
#find_package(Eigen REQUIRED)
#include_directories(${EIGEN_INCLUDE_DIRS})

find_package(catkin REQUIRED)

catkin_package()
 

