<?xml version="1.0"?>
<package format="2">
  <name>mrsl_quadrotor_launch</name>
  <version>0.0.0</version>
  <description>The mrsl_quadrotor_launch package</description>

  <maintainer email="sikang@todo.todo">sikang</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>



</package>
