<?xml version="1.0"?>
<package format="2">
  <name>mrsl_quadrotor_utils</name>
  <version>0.0.0</version>
  <description>The msg_utils package</description>
  <maintainer email="sikang@todo.todo">sikang</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>topic_tools</depend>
</package>
